[workspace]

members = [
    "ceasar_cipher",
    "cryptopals/aes",
    "cryptopals/mt19937",
    "cryptopals/sha",
    "cryptopals/md",
    "cryptopals/dh",
    "cryptopals/rsa",
    "cryptopals/set1/challenge1",
    "cryptopals/set1/challenge2",
    "cryptopals/set1/challenge3",
    "cryptopals/set1/challenge4",
    "cryptopals/set1/challenge5",
    "cryptopals/set1/challenge6",
    "cryptopals/set1/challenge7",
    "cryptopals/set1/challenge8",
    "cryptopals/set2/challenge9",
    "cryptopals/set2/challenge10",
    "cryptopals/set2/challenge11",
    "cryptopals/set2/challenge12",
    "cryptopals/set2/challenge13",
    "cryptopals/set2/challenge14",
    "cryptopals/set2/challenge15",
    "cryptopals/set2/challenge16",
    "cryptopals/set3/challenge17",
    "cryptopals/set3/challenge18",
    "cryptopals/set3/challenge19",
    "cryptopals/set3/challenge20",
    "cryptopals/set3/challenge21",
    "cryptopals/set3/challenge22",
    "cryptopals/set3/challenge23",
    "cryptopals/set3/challenge24",
    "cryptopals/set4/challenge25",
    "cryptopals/set4/challenge26",
    "cryptopals/set4/challenge27",
    "cryptopals/set4/challenge28",
    "cryptopals/set4/challenge29",
    "cryptopals/set4/challenge30",
    "cryptopals/set4/challenge31",
    "cryptopals/set4/challenge32",
    "cryptopals/set5/challenge33",
    "cryptopals/set5/challenge34",
    "cryptopals/set5/challenge35",
    "cryptopals/set5/challenge36",
    "cryptopals/set5/challenge37",
    "cryptopals/set5/challenge38",
    "cryptopals/set5/challenge40",
]