[package]
name = "challenge32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3.2"
reqwest = "0.11.10"
sha     = { path = "../../sha" }
rand    = "0.8.5"
hex     = "0.3.1"
