[package]
name = "challenge37"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3.2"
reqwest = { version = "0.11.10", features = ["json"] }
dh = { path = "../../dh" }
ibig = "0.3.5"
sha256 = "1.0.3"
hmac-sha256 = "1.1.3"
rand    = "0.8.5"
